<resources>
    <!--strings for activity_main.xml-->
    <string name="app_name">CricketScoreKeeper</string>
    <string name="separator">/</string>
    <string name="overs">Overs</string>

    <!--strings for activity_rules.xml-->
    <string name="rules_title">Game Rules</string>
    <string name="rule_one">=> Total Players in each team : 11</string>
    <string name="rule_two">=> Total Overs   : 20</string>
    <string name="rule_three">=> 1 Over      : 6 Balls</string>
    <string name="rule_four">=> Team scoring maximum runs, without losing all the wickets gets to win.</string>
    <string name="game_name">T20 Cricket</string>
    <string name="team_title_a">Team A</string>
    <string name="runs_teama">0</string>
    <string name="wickets_teama">0</string>
    <string name="overs_teama">0</string>
    <string name="six_teama">Add 6</string>
    <string name="four_teama">Add 4</string>
    <string name="two_teama">Add 2</string>
    <string name="one_teama">Add 1</string>
    <string name="wicket_teama">Wicket</string>
    <string name="reset">Reset</string>
    <string name="rules">Rules</string>
    <string name="team_title_b">Team B</string>
    <string name="runs_teamb">0</string>
    <string name="wickets_teamb">0</string>
    <string name="overs_teamb">0</string>
    <string name="six_teamb">Add 6</string>
    <string name="four_teamb">Add 4</string>
    <string name="two_teamb">Add 2</string>
    <string name="one_teamb">Add 1</string>
    <string name="wicket_teamb">Wicket</string>
</resources>
