<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:text="@string/rules_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="24sp"
        android:id="@+id/textView"
        android:layout_margin="16dp"/>

    <TextView
        android:text="@string/rule_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />
    <TextView
        android:text="@string/rule_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_margin="10dp"/>
    <TextView
        android:text="@string/rule_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_margin="10dp"
        />
    <TextView
        android:text="@string/rule_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_margin="10dp"
         />

</LinearLayout>