<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dell.cricketscorekeeper.MainActivity"
    android:background="@drawable/cricket">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/game_name"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:shadowColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/team_title_a"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_margin="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/runs_teama"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/numberOfRunsA"
                        android:textSize="20sp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/separator"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wickets_teama"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:id="@+id/numberOfWicketsA"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginRight="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overs_teama"
                        android:textSize="20sp"
                        android:id="@+id/numberOfOversA"
                        android:textStyle="bold"
                        android:textColor="@color/colorButton"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/colorButton"
                        android:text="@string/overs"
                        android:layout_margin="2dp"/>

                </LinearLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/six_teama"
                    android:id="@+id/btnAddSixA"
                    android:layout_gravity="center"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four_teama"
                    android:id="@+id/btnAddFourA"
                    android:layout_gravity="center"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_teama"
                    android:id="@+id/btnAddTwoA"
                    android:layout_gravity="center"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_teama"
                    android:id="@+id/btnAddOneA"
                    android:layout_gravity="center"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wicket_teama"
                    android:id="@+id/btnAddWicketA"
                    android:layout_gravity="center"/>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/team_title_b"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_margin="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/runs_teamb"
                        android:textColor="@color/colorPrimaryDark"
                        android:id="@+id/numberOfRunsB"
                        android:textSize="20sp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/separator"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wickets_teamb"
                        android:id="@+id/numberOfWicketsB"
                        android:textSize="20sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overs_teamb"
                        android:id="@+id/numberOfOversB"
                        android:textSize="20sp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorButton"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overs"
                        android:layout_margin="2dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorButton"/>

                </LinearLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/six_teamb"
                    android:id="@+id/btnAddSixB"
                    android:layout_gravity="center"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/four_teamb"
                    android:id="@+id/btnAddFourB"
                    android:layout_gravity="center"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_teamb"
                    android:id="@+id/btnAddTwoB"
                    android:layout_gravity="center"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_teamb"
                    android:id="@+id/btnAddOneB"
                    android:layout_gravity="center"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wicket_teamb"
                    android:id="@+id/btnAddWicketB"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_weight="1"
                android:id="@+id/btnReset"
                android:layout_margin="16dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                android:layout_weight="1"
                android:id="@+id/btnRules"
                android:layout_margin="16dp"/>

        </LinearLayout>
        </LinearLayout>
</ScrollView>
